# ai-toolkit

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yml
modelcontextprotocol/: README.md  package.json  pnpm-lock.yaml
modelcontextprotocol/scripts/: publish
modelcontextprotocol/src/: index.ts
modelcontextprotocol/src/test/: index.test.ts
python/: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/examples/crewai/: .env.template  main.py
python/examples/langchain/: .env.template  main.py
python/examples/openai/: .env.template  main.py
python/subtotal_ai_toolkit/: api.py  configuration.py  functions.py  prompts.py  schema.py  tools.py
python/subtotal_ai_toolkit/crewai/: tool.py  toolkit.py
python/subtotal_ai_toolkit/langchain/: tool.py
python/subtotal_ai_toolkit/openai/: toolkit.py
python/tests/: test_configuration.py
typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml
typescript/examples/ai-sdk/: .env.template  index.ts  package.json
typescript/examples/langchain/: .env.template  index.ts  package.json
typescript/examples/openai/: .env.template  index.ts  package.json
typescript/scripts/: publish
typescript/src/ai-sdk/: tool.ts  toolkit.ts
typescript/src/langchain/: index.ts  tool.ts  toolkit.ts
typescript/src/modelcontextprotocol/: toolkit.ts
typescript/src/openai/: index.ts  toolkit.ts
typescript/src/shared/: api.ts  configuration.ts  functions.ts  parameters.ts  prompts.ts  tools.ts
typescript/src/test/shared/: configuration.test.ts
